--- a/pages/login/templates/login.html
+++ b/pages/login/templates/login.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>What's In My Box</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/login.css') }}">
+    <title>What's In My Box</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='login/static/CSS/login.css') }}">
 </head>
 <body>
-    <h3>What's In My Box?</h3>
-    <div class="container">
+
+     <h3>What's In My Box?</h3>
+       <div class="container">
         <h4>Hello again!</h4>
         <h1>LOG IN</h1>
         <form action="#" id="login-form" method="GET" novalidate>
@@ -43,3 +45,4 @@
     <script src="../static/js/login.js"></script>
 </body>
 </html>
+
