--- a/pages/post/templates/post.html
+++ b/pages/post/templates/post.html
@@ -1,25 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends 'base.html'%}
+
+{% block page_head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post A New Lunch Box</title>
 {#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">#}
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/post.css') }}">
-</head>
-<body>
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="nav-logo">What's in my Box?</div>
-        <div class="nav-links">
-            <a href="../../feed/templates/feed.html">Feed</a>
-            <a href="../../profile/templates/profile.html">My Profile</a>
-            <a href="post.html">Share a New Post</a>
-            <a href="../../search/templates/search.html">Search</a>
-            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>
-        </div>
-    </nav>
+    <link rel="stylesheet" href="{{ url_for('static', filename='post/static/CSS/post.css') }}">
+{% endblock %}
 
+    <!-- Navigation Bar -->
+{#    <nav>#}
+{#        <div class="nav-logo">What's in my Box?</div>#}
+{#        <div class="nav-links">#}
+{#            <a href="../../feed/templates/feed.html">Feed</a>#}
+{#            <a href="../../profile/templates/profile.html">My Profile</a>#}
+{#            <a href="post.html">Share a New Post</a>#}
+{#            <a href="../../search/templates/search.html">Search</a>#}
+{#            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>#}
+{#        </div>#}
+{#    </nav>#}
+{% block content %}
+    <main>
     <!-- Page Header -->
     <h3>Post A New Lunch Box</h3>
 
@@ -97,5 +98,5 @@
     </div>
 
     <script src="../static/js/post.js"></script>
-</body>
-</html>
+    </main>
+{% endblock %}
