--- a/pages/recipe/templates/recipe.html
+++ b/pages/recipe/templates/recipe.html
@@ -1,23 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends 'base.html'%}
+
+{% block page_head %}
     <meta charset="UTF-8">
     <title>LunchBox Recipe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/recipe.css') }}">
-</head>
-<body>
-    <nav>
-        <div class="nav-logo">What's in my Box?</div>
-        <div class="nav-links">
-            <a href="../../feed/templates/feed.html">Feed</a>
-            <a href="../../profile/templates/profile.html">My Profile</a>
-            <a href="../../post/templates/post.html">Share a New Post</a>
-            <a href="../../search/templates/search.html">Search</a>
-            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>
-        </div>
-    </nav>
+    <link rel="stylesheet" href="{{ url_for('static', filename='recipe/static/CSS/recipe.css') }}">
+{% endblock %}
 
+{#    <nav>#}
+{#        <div class="nav-logo">What's in my Box?</div>#}
+{#        <div class="nav-links">#}
+{#            <a href="../../feed/templates/feed.html">Feed</a>#}
+{#            <a href="../../profile/templates/profile.html">My Profile</a>#}
+{#            <a href="../../post/templates/post.html">Share a New Post</a>#}
+{#            <a href="../../search/templates/search.html">Search</a>#}
+{#            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>#}
+{#        </div>#}
+{#    </nav>#}
+
+{% block content %}
+<main>
     <div class="container">
         <div class="image-section">
             <img src="../../../static/images/meatballs.jpg" alt="Lunchbox" />
@@ -50,5 +52,5 @@
             <p class="tag"><strong>Dietary Tags:</strong> #meat</p>
         </div>
     </div>
-</body>
-</html>
+</main>
+{% endblock %}
