--- a/pages/signup/templates/signup.html
+++ b/pages/signup/templates/signup.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/signup.css') }}">
-    <script defer src="../static/js/signup.js"></script>
+{#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">#}
+    <link rel="stylesheet" href="{{ url_for('static', filename='signup/static/CSS/signup.css') }}">
 </head>
+
 <body>
     <h3>What's In My Box</h3>
 
@@ -80,11 +80,9 @@
         <p class="signin-text">Already have an account?</p>
         <button
             onclick="window.location.href='login.html'"
-            class="signin-btn"
-        >
-            Sign In
-        </button>
+            class="signin-btn"> Sign In </button>
     </div>
  <script src="../static/js/signup.js"></script>
+{# <script defer src="../static/js/signup.js"></script>#}
 </body>
 </html>
