updated post and feed

--- a/pages/feed/templates/feed.html
+++ b/pages/feed/templates/feed.html
@@ -12,36 +12,48 @@
     <main>
         <h1 class="heading">My Feed</h1>
         <div class="recipe-grid">
-            <!-- Recipe 1 -->
+            {% for recipe in recipes %}
             <div class="recipe-card">
-                <a href="../../recipe/templates/recipe.html">
-                    <img src="{{ url_for('static', filename='images/meatballs.jpg') }}" alt="Recipe 1">
+                <a href="{{ url_for('recipe', recipe_id=recipe['_id']) }}">
+                    <img src="{{ url_for('static', filename='images/' + recipe['image_url']) }}" alt="{{ recipe['title'] }}">
                 </a>
-                <h3>Recipe Title 1</h3>
-                <p>Posted by: Ido Cohen</p>
-                <p>12/11/2024 10:30 PM</p>
+                <h3>{{ recipe['title'] }}</h3>
+                <p>Posted by: {{ recipe['created_by'] }}</p>
+                <p>{{ recipe['created_at'].strftime('%d/%m/%Y %I:%M %p') if recipe['created_at'] else 'Unknown Date' }}</p>
             </div>
-
-            <!-- Recipe 2 -->
-            <div class="recipe-card">
-                <a href="../../recipe/templates/recipe.html">
-                    <img src="../../../static/images/recipe3.jpg" alt="Recipe 2">
-                </a>
-                <h3>Recipe Title 2</h3>
-                <p>Posted by: Maya Levi</p>
-                <p>12/11/2024 9:45 PM</p>
-            </div>
-
-            <!-- Recipe 3 -->
-            <div class="recipe-card">
-                <a href="../../recipe/templates/recipe.html">
-                    <img src="../../../static/images/AutumnSalad.jpg" alt="Recipe 3">
-                </a>
-                <h3>Recipe Title 3</h3>
-                <p>Posted by: Noam Regev</p>
-                <p>12/11/2024 8:20 PM</p>
-            </div>
+            {% endfor %}
         </div>
+{#        <div class="recipe-grid">#}
+{#            <!-- Recipe 1 -->#}
+{#            <div class="recipe-card">#}
+{#                <a href="../../recipe/templates/recipe.html">#}
+{#                    <img src="{{ url_for('static', filename='images/meatballs.jpg') }}" alt="Recipe 1">#}
+{#                </a>#}
+{#                <h3>Recipe Title 1</h3>#}
+{#                <p>Posted by: Ido Cohen</p>#}
+{#                <p>12/11/2024 10:30 PM</p>#}
+{#            </div>#}
+{##}
+{#            <!-- Recipe 2 -->#}
+{#            <div class="recipe-card">#}
+{#                <a href="../../recipe/templates/recipe.html">#}
+{#                    <img src="../../../static/images/recipe3.jpg" alt="Recipe 2">#}
+{#                </a>#}
+{#                <h3>Recipe Title 2</h3>#}
+{#                <p>Posted by: Maya Levi</p>#}
+{#                <p>12/11/2024 9:45 PM</p>#}
+{#            </div>#}
+{##}
+{#            <!-- Recipe 3 -->#}
+{#            <div class="recipe-card">#}
+{#                <a href="../../recipe/templates/recipe.html">#}
+{#                    <img src="../../../static/images/AutumnSalad.jpg" alt="Recipe 3">#}
+{#                </a>#}
+{#                <h3>Recipe Title 3</h3>#}
+{#                <p>Posted by: Noam Regev</p>#}
+{#                <p>12/11/2024 8:20 PM</p>#}
+{#            </div>#}
+{#        </div>#}
     </main>
 {% endblock %}
 
