--- a/pages/login/templates/login.html
+++ b/pages/login/templates/login.html
@@ -41,7 +41,7 @@
             class="signup-btn">Sign Up!
         </button>
     </div>
-    <script src="../static/js/login.js"></script>
+    <script src="../pages/login/static/js/login.js"></script>
 </body>
 </html>
 
