--- a/pages/feed/static/CSS/feed.css
+++ b/pages/feed/static/CSS/feed.css
@@ -74,10 +74,16 @@ main {
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .recipe-card img {
     width: 100%;
+    max-width: 400px; /* Limits max width */
+    height: 400px;
+    aspect-ratio: 1 / 1;
     border-radius: 8px;
     object-fit: cover;
 }
