--- a/pages/login/templates/login.html
+++ b/pages/login/templates/login.html
@@ -12,7 +12,7 @@
        <div class="container">
         <h4>Hello again!</h4>
         <h1>LOG IN</h1>
-        <form action="#" id="login-form" method="GET" novalidate>
+        <form id="login-form" method="POST" novalidate>
             <!-- Email Input -->
             <input
                 type="email"
