--- a/pages/feed/templates/feed.html
+++ b/pages/feed/templates/feed.html
@@ -21,14 +21,14 @@
 
     {# Ensure correct static URL handling #}
     {% if not image_path.startswith('static/') %}
-        {% set image_path = 'images/' + image_path %}
+        {% set image_path =  image_path %}
     {% else %}
         {% set image_path = image_path.replace('static/', '') %}
     {% endif %}
 
     <img src="{{ url_for('static', filename=image_path) }}" alt="{{ recipe['title'] }}">
 {% else %}
-    <img src="{{ url_for('static', filename='images/default.jpg') }}" alt="Default Image">
+    <img src="{{ url_for('static', filename='images/default_recipe.jpg') }}" alt="Default Image">
 {% endif %}
                     </a>
                     <h3>{{ recipe['title'] }}</h3>
