--- a/pages/post/templates/post.html
+++ b/pages/post/templates/post.html
@@ -4,21 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post A New Lunch Box</title>
-{#    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">#}
     <link rel="stylesheet" href="{{ url_for('static', filename='post/static/CSS/post.css') }}">
 {% endblock %}
 
-    <!-- Navigation Bar -->
-{#    <nav>#}
-{#        <div class="nav-logo">What's in my Box?</div>#}
-{#        <div class="nav-links">#}
-{#            <a href="../../feed/templates/feed.html">Feed</a>#}
-{#            <a href="../../profile/templates/profile.html">My Profile</a>#}
-{#            <a href="post.html">Share a New Post</a>#}
-{#            <a href="../../search/templates/search.html">Search</a>#}
-{#            <a href="../../log%20in/templates/login.html" class="logout">Log Out</a>#}
-{#        </div>#}
-{#    </nav>#}
 {% block content %}
     <main>
     <!-- Page Header -->
@@ -72,7 +60,7 @@
         <!-- Right Section: Now Inside the Form -->
         <div class="right-section">
             <div class="photo-upload">
-                <input type="file" id="photo" name="photo" accept="image/*">
+                <input type="file" id="photo" name="photo" accept="image/*" required>
                 <label for="photo" class="photo-label">
                     Choose a photo from camera roll:
                     <br>
