--- a/pages/profile/templates/profile.html
+++ b/pages/profile/templates/profile.html
@@ -15,8 +15,24 @@
         <!-- Left Section: User Info -->
         <div class="left-half">
             <h1>My Profile</h1>
-            <img src="{{ url_for('static', filename='images/' + user.profile_picture) }}"
-                 alt="User Profile Picture" class="profile-picture">
+            <!-- ✅ Ensure correct static URL handling for profile picture -->
+            {% if user['profile_picture'] %}
+                {% set image_path = user['profile_picture'] %}
+
+                {% if not image_path.startswith('static/') %}
+                    {% set image_path = image_path %}
+                {% else %}
+                    {% set image_path = image_path.replace('static/', '') %}
+                {% endif %}
+
+                <img src="{{ url_for('static', filename=image_path) }}" alt="User Profile Picture" class="profile-picture">
+            {% else %}
+                <img src="{{ url_for('static', filename='images/default_profile.jpg') }}" alt="Default Profile Picture" class="profile-picture">
+            {% endif %}
+{#            <img src="{{ url_for('static', filename= user['profile_picture'] if user['profile_picture'] else 'default_profile.jpg') }}"#}
+{#            >#}
+{#            <img src="{{ url_for('static', filename='images/' + user.profile_picture) }}"#}
+{#                 alt="User Profile Picture" class="profile-picture">#}
                         <div class="username">
                  <strong>@{{ user.username }}</strong> <br>
                 <span>{{ user.email }}</span> <br>
@@ -25,9 +41,23 @@
 
         <!-- Right Section: User Lunchboxes -->
         <div class="right-half">
-        {% for image in user.uploaded_recipes %}
-    <a href="{{ url_for('recipe_page_from_profile', image_name=image) }}">
-        <img src="{{ url_for('static', filename='images/' + image) }}"
+{#            {% for recipe in user.uploaded_recipes %}#}
+{#                <a href="{{ url_for('recipe', recipe_id=recipe['_id']) }}">#}
+{#        {% set image_path = recipe['image_url'] %}#}
+{##}
+        {# Ensure correct static URL handling #}
+{#        {% if not image_path.startswith('static/') %}#}
+{#            {% set image_path = image_path %}#}
+{#        {% else %}#}
+{#            {% set image_path = image_path.replace('static/', '') %}#}
+{#        {% endif %}#}
+{##}
+{#        <img src="{{ url_for('static', filename=image_path) }}" alt="{{ recipe['title'] }}" class="lunchbox-picture">#}
+{#    </a>#}
+{#{% endfor %}#}
+        {% for recipe in user.uploaded_recipes %}
+    <a href="{{ url_for('recipe', recipe_id=recipe_id) }}">
+        <img src="{{ url_for('static', filename=recipe.image_url) }}"
              alt="Recipe Image" class="lunchbox-picture">
     </a>
 {% endfor %}
