--- a/pages/recipe/templates/recipe.html
+++ b/pages/recipe/templates/recipe.html
@@ -11,7 +11,7 @@
 <main>
     <div class="container">
         <div class="image-section">
-            <img src="{{ url_for('static', filename='images/' + recipe.image_url) }}" alt="Lunchbox">
+            <img src="{{ url_for('static', filename=recipe.image_url) }}" alt="Lunchbox">
         </div>
 
         <div class="right-section">
