--- a/pages/feed/templates/feed.html
+++ b/pages/feed/templates/feed.html
@@ -27,8 +27,8 @@
     {% endif %}
 
     <img src="{{ url_for('static', filename=image_path) }}" alt="{{ recipe['title'] }}">
-{% else %}
-    <img src="{{ url_for('static', filename='images/default_recipe.jpg') }}" alt="Default Image">
+{#{% else %}#}
+{#    <img src="{{ url_for('static', filename='images/default_recipe.jpg') }}" alt="Default Image">#}
 {% endif %}
                     </a>
                     <h3>{{ recipe['title'] }}</h3>
