--- a/pages/login/templates/login.html
+++ b/pages/login/templates/login.html
@@ -21,7 +21,7 @@
                 class="input-field"
                 required
                 aria-label="Email">
-            <span class="error" id="emailError"></span>
+{#            <span class="error" id="emailError"></span>#}
 
             <!-- Password Input -->
             <input
@@ -31,7 +31,7 @@
                 class="input-field"
                 required
                 aria-label="Password">
-            <span class="error" id="passwordError"></span>
+            <span class="error" id="emailError"></span>
 
             <!-- Login Button -->
             <button type="submit" class="login-btn">Login</button>
