--- a/pages/profile/static/CSS/profile.css
+++ b/pages/profile/static/CSS/profile.css
@@ -89,6 +89,27 @@ nav {
     color: #0a5247;
 }
 
+.edit-profile-btn {
+    width: 20%;
+    text-align: center;
+    background-color: #ffc643;
+    color: black;
+    font-size: 16px;
+    padding: 5px;
+    margin-top: 10px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border: none;
+    font-family: 'Palatino Linotype', 'Palatino', serif;
+    cursor: pointer;
+}
+
+.edit-profile-btn:hover {
+    background-color: darkorange;
+    animation: grow 0.5s ease-in-out;
+}
+
+
 .right-half {
     padding: 10px 20px;
     width: 50%;
