--- a/pages/edit_profile/templates/edit_profile.html
+++ b/pages/edit_profile/templates/edit_profile.html
@@ -20,8 +20,9 @@
                 <label for="profile-picture" class="photo-label">
                     <i class="fas fa-camera"></i>
                     Upload New Profile Picture
-{#                   <span id="file-feedback" class="file-feedback">No file chosen</span>#}
+                   <span id="file-feedback" class="file-feedback">No file chosen</span>
                 </label>
+
             </div>
 
             <!-- Username -->
