--- a/pages/edit_profile/templates/edit_profile.html
+++ b/pages/edit_profile/templates/edit_profile.html
@@ -12,7 +12,7 @@
     <h3>Edit Profile</h3>
 
     <div class="container">
-        <form id="edit-profile-form" action="{{ url_for('edit_profile') }}" method="POST" enctype="multipart/form-data">
+        <form id="edit-profile-form" action="{{ url_for('edit_profile') }}" method="POST" enctype="multipart/form-data"  data-original-username="{{ user.username }}">
 
             <!-- Profile Picture Upload -->
             <div class="form-group photo-upload">
@@ -50,6 +50,7 @@
             <button type="button" class="delete-profile-btn" onclick="confirmDelete()">Delete Account</button>
         </form>
 
+        <script src="{{ url_for('static', filename='edit_profile/static/js/edit_profile.js') }}"></script>
         <script>
             function confirmDelete() {
                 if (confirm("Are you sure you want to delete your account? This action cannot be undone.")) {
