--- a/pages/edit_profile/templates/edit_profile.html
+++ b/pages/edit_profile/templates/edit_profile.html
@@ -43,6 +43,9 @@
                 <input type="password" id="password" name="password" class="input-field">
             </div>
 
+            <p id="formSuccess" class="success-message"></p>
+
+
             <!-- Update Profile Button -->
             <button type="submit" class="update-profile-btn">Update Profile</button>
 
